--- a/assets/bibliography/2024-05-07-deqalg-reasoning.bib
+++ b/assets/bibliography/2024-05-07-deqalg-reasoning.bib
@@ -5,3 +5,47 @@
   year={2015},
   url={https://arxiv.org/pdf/1502.04623.pdf}
 }
+
+@misc{velickovic2020neural,
+      title={Neural Execution of Graph Algorithms}, 
+      author={Petar Veličković and Rex Ying and Matilde Padovano and Raia Hadsell and Charles Blundell},
+      year={2020},
+      eprint={1910.10593},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+
+@misc{velickovic2022clrs,
+      title={The CLRS Algorithmic Reasoning Benchmark}, 
+      author={Petar Veličković and Adrià Puigdomènech Badia and David Budden and Razvan Pascanu and Andrea Banino and Misha Dashevskiy and Raia Hadsell and Charles Blundell},
+      year={2022},
+      eprint={2205.15659},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{ibarz2022generalist,
+      title={A Generalist Neural Algorithmic Learner}, 
+      author={Borja Ibarz and Vitaly Kurin and George Papamakarios and Kyriacos Nikiforou and Mehdi Bennani and Róbert Csordás and Andrew Dudzik and Matko Bošnjak and Alex Vitvitskyi and Yulia Rubanova and Andreea Deac and Beatrice Bevilacqua and Yaroslav Ganin and Charles Blundell and Petar Veličković},
+      year={2022},
+      eprint={2209.11142},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{bai2019deep,
+      title={Deep Equilibrium Models}, 
+      author={Shaojie Bai and J. Zico Kolter and Vladlen Koltun},
+      year={2019},
+      eprint={1909.01377},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{baiblog,
+      title={Chapter 4: Deep Equilibrium Models},
+      author={ Zico Kolter and David Duvenaud and Matt Johnson},
+      year={2020},
+      url={implicit-layers-tutorial.org/deep_equilibrium_models/}
+}
