--- a/_posts/2024-05-07-bench-hvp.md
+++ b/_posts/2024-05-07-bench-hvp.md
@@ -39,7 +39,7 @@ toc:
       - name: Time complexity
       - name: Memory complexity
 
-# Below is an example of injecting additional post-specific styles.
+# Below is an example of injecting additional post-specific styles.enb
 # This is used in the 'Layouts' section of this post.
 # If you use this post as a template, delete this _styles block.
 _styles: >
@@ -290,7 +290,7 @@ However, this method is quite cumbersome making it impossible to use for deep ne
 Nevertheless, we will see in what follows that computing and storing the full Hessian matrix is not mandatory to compute HVPs.
 
 ## HVPs without explicit Hessian computation
-A clever use of automatic differentiation enables to compute HVPs without computing the Hessian. The [JAX documentation](https://jax.readthedocs.io/en/latest/notebooks/autodiff_cookbook.html) describes three ways to do it.
+A clever use of automatic differentiation enables computing HVPs without computing the Hessian. The [JAX documentation](https://jax.readthedocs.io/en/latest/notebooks/autodiff_cookbook.html) describes three ways to do it.
 
 ### Forward-over-reverse
 The HVPs have another interpretation coming from differential calculus. They are the directional derivatives of the gradient of $$f$$ in the direction $v$<d-cite key="Pearlmutter1994"></d-cite>:
