add ref, modify conclusion, add label reco section

--- a/assets/bibliography/2024-05-07-understanding-gradient-inversion-attacks-from-the-prior-knowledge-perspective.bib
+++ b/assets/bibliography/2024-05-07-understanding-gradient-inversion-attacks-from-the-prior-knowledge-perspective.bib
@@ -46,3 +46,31 @@
   booktitle={Advances in Neural Information Processing Systems},
   year={2019}
 }
+
+@article{zhao2020idlg,
+  title={idlg: Improved deep leakage from gradients},
+  author={Zhao, Bo and Mopuri, Konda Reddy and Bilen, Hakan},
+  journal={arXiv preprint arXiv:2001.02610},
+  year={2020}
+}
+
+@inproceedings{huang2021evaluating,
+  title={Evaluating gradient inversion attacks and defenses in federated learning},
+  author={Huang, Yangsibo and Gupta, Samyak and Song, Zhao and Li, Kai and Arora, Sanjeev},
+  journal={Advances in Neural Information Processing Systems},
+  year={2021}
+}
+
+@inproceedings{sun2021soteria,
+  title={Soteria: Provable defense against privacy leakage in federated learning from representation perspective},
+  author={Sun, Jingwei and Li, Ang and Wang, Binghui and Yang, Huanrui and Li, Hai and Chen, Yiran},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  year={2021}
+}
+
+@inproceedings{zhangsurvey,
+  title={A Survey on Gradient Inversion: Attacks, Defenses and Future Directions},
+  author={Zhang, Rui and Guo, Song and Wang, Junxiao and Xie, Xin and Tao, Dacheng},
+  booktitle = {International Joint Conference on Artificial Intelligence},
+  year={2022}
+}
