ntk, cite actual paper, this work

--- a/assets/bibliography/2024-05-07-hidden-convex-relu.bib
+++ b/assets/bibliography/2024-05-07-hidden-convex-relu.bib
@@ -181,3 +181,14 @@
   year = {2021},
   urldate = {2023-12-08}
 }
+
+@inproceedings{wangHiddenConvexOptimization2022,
+  title = {The Hidden Convex Optimization Landscape of Regularized Two-Layer ReLU Networks: An Exact Characterization of Optimal Solutions},
+  shorttitle = {The Hidden Convex Optimization Landscape of Regularized Two-Layer ReLU Networks},
+  booktitle = {The Tenth International Conference on Learning Representations, ICLR 2022, Virtual Event, April 25-29, 2022},
+  author = {Wang, Yifei and Lacotte, Jonathan and Pilanci, Mert},
+  year = {2022},
+  publisher = {OpenReview.net},
+  urldate = {2023-03-11},
+  file = {/home/savar/Zotero/storage/FJ85TBX9/Wang et al. - 2022 - The Hidden Convex Optimization Landscape of Two-La.pdf}
+}
