--- a/assets/bibliography/2024-05-07-deqalg-reasoning.bib
+++ b/assets/bibliography/2024-05-07-deqalg-reasoning.bib
@@ -49,3 +49,21 @@
       year={2020},
       url={implicit-layers-tutorial.org/deep_equilibrium_models/}
 }
+
+@misc{gilmer2017neural,
+      title={Neural Message Passing for Quantum Chemistry}, 
+      author={Justin Gilmer and Samuel S. Schoenholz and Patrick F. Riley and Oriol Vinyals and George E. Dahl},
+      year={2017},
+      eprint={1704.01212},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{paulus2020raoblackwellizing,
+      title={Rao-Blackwellizing the Straight-Through Gumbel-Softmax Gradient Estimator}, 
+      author={Max B. Paulus and Chris J. Maddison and Andreas Krause},
+      year={2020},
+      eprint={2010.04838},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
