added: meta-learning

--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -75,3 +75,25 @@ author = {Singh, Satinder and Barto, Andrew and Chentanez, Nuttapong},
 year = {2004},
 url = {https://proceedings.neurips.cc/paper_files/paper/2004/file/4be5a36cbaca8ab9d2066debfe4e65c1-Paper.pdf},
 }
+
+@misc{beck2023survey,
+      title={A Survey of Meta-Reinforcement Learning}, 
+      author={Jacob Beck and Risto Vuorio and Evan Zheran Liu and Zheng Xiong and Luisa Zintgraf and Chelsea Finn and Shimon Whiteson},
+      year={2023},
+      eprint={2301.08028},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@article{huisman2021survey,
+   title={A survey of deep meta-learning},
+   volume={54},
+   ISSN={1573-7462},
+   url={http://dx.doi.org/10.1007/s10462-021-10004-4},
+   DOI={10.1007/s10462-021-10004-4},
+   number={6},
+   journal={Artificial Intelligence Review},
+   publisher={Springer Science and Business Media LLC},
+   author={Huisman, Mike and van Rijn, Jan N. and Plaat, Aske},
+   year={2021},
+   month=apr, pages={4483–4541} }
