--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -4,14 +4,14 @@
       year={2020},
       eprint={2003.05325},
       archivePrefix={arXiv},
-      primaryClass={cs.LG}
+      primaryClass={cs.LG},
 }
 
 @inproceedings{Schmidhuber1991APF,
   title={A possibility for implementing curiosity and boredom in model-building neural controllers},
   author={J{\"u}rgen Schmidhuber},
   year={1991},
-  url={https://api.semanticscholar.org/CorpusID:18060048}
+  url={https://api.semanticscholar.org/CorpusID:18060048},
 }
 
 @misc{burda2018exploration,
@@ -20,7 +20,7 @@
       year={2018},
       eprint={1810.12894},
       archivePrefix={arXiv},
-      primaryClass={cs.LG}
+      primaryClass={cs.LG},
 }
 
 @misc{guo2022byolexplore,
@@ -29,7 +29,7 @@
       year={2022},
       eprint={2206.08332},
       archivePrefix={arXiv},
-      primaryClass={cs.LG}
+      primaryClass={cs.LG},
 }
 
 @misc{jarrett2023curiosity,
@@ -38,7 +38,16 @@
       year={2023},
       eprint={2211.10515},
       archivePrefix={arXiv},
-      primaryClass={stat.ML}
+      primaryClass={stat.ML},
+}
+
+@misc{beck2023survey,
+      title={A Survey of Meta-Reinforcement Learning}, 
+      author={Jacob Beck and Risto Vuorio and Evan Zheran Liu and Zheng Xiong and Luisa Zintgraf and Chelsea Finn and Shimon Whiteson},
+      year={2023},
+      eprint={2301.08028},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
 }
 
 @misc{pathak2017curiositydriven,
@@ -47,7 +56,7 @@
       year={2017},
       eprint={1705.05363},
       archivePrefix={arXiv},
-      primaryClass={cs.LG}
+      primaryClass={cs.LG},
 }
 
 @misc{burda2018largescale,
@@ -56,7 +65,7 @@
       year={2018},
       eprint={1808.04355},
       archivePrefix={arXiv},
-      primaryClass={cs.LG}
+      primaryClass={cs.LG},
 }
 
 @book{sutton2018intro,
@@ -76,23 +85,17 @@ year = {2004},
 url = {https://proceedings.neurips.cc/paper_files/paper/2004/file/4be5a36cbaca8ab9d2066debfe4e65c1-Paper.pdf},
 }
 
-@misc{beck2023survey,
-title={A Survey of Meta-Reinforcement Learning}, 
-author={Jacob Beck and Risto Vuorio and Evan Zheran Liu and Zheng Xiong and Luisa Zintgraf and Chelsea Finn and Shimon Whiteson},
-year={2023},
-eprint={2301.08028},
-archivePrefix={arXiv},
-primaryClass={cs.LG}
-}
 
 @article{huisman2021survey,
 title={A survey of deep meta-learning},
-ISSN={1573-7462},
-url={http://dx.doi.org/10.1007/s10462-021-10004-4},
-DOI={10.1007/s10462-021-10004-4},
-number={6},
-journal={Artificial Intelligence Review},
-publisher={Springer Science and Business Media LLC},
 author={Huisman, Mike and van Rijn, Jan N. and Plaat, Aske},
 year={2021},
+url={http://dx.doi.org/10.1007/s10462-021-10004-4},
+}
+
+@article{botvinick2019rlfastslow,
+title = {Reinforcement Learning, Fast and Slow},
+author = {Matthew Botvinick and Sam Ritter and Jane X. Wang and Zeb Kurth-Nelson and Charles Blundell and Demis Hassabis},
+year = {2019},
+url = {https://www.sciencedirect.com/science/article/pii/S1364661319300610},
 }
