--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -99,3 +99,10 @@ author = {Matthew Botvinick and Sam Ritter and Jane X. Wang and Zeb Kurth-Nelson
 year = {2019},
 url = {https://www.sciencedirect.com/science/article/pii/S1364661319300610},
 }
+
+@online{burda2018reinforcement,
+  title     = {Reinforcement learning with prediction-based rewards},
+  author    = {Yura Burda and Harri Edwards},
+  year      = {2018},
+  url       = {https://openai.com/research/reinforcement-learning-with-prediction-based-rewards}
+}
